# runegate

./: .env.example  .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  NOTICE  README.md
.cargo/: config.toml
.github/ISSUE_TEMPLATE/: bug_report.md
config/: email.toml.example
deploy/: README.md  generate_secrets.sh  install.sh  uninstall.sh
deploy/nginx/: runegate-nginx.conf  runegate.conf
deploy/systemd/: runegate.service  target-app-uvicorn.service.example
docs/: architecture-overview.md  identity-to-target.md  performance-tests.md
examples/: send_email.rs  test_jwt_validation.rs  test_target_service.rs
scripts/: README.md  add_spdx_headers.py  create_pr.sh  run_integration_tests.sh  shutdown_server.sh  start_test_server.sh  test_token.sh
src/: auth.rs  email.rs  lib.rs  logging.rs  main.rs  memory_session_store.rs  middleware.rs  proxy.rs  rate_limit.rs  send_magic_link.rs
static/: login.html
static/img/favicon/: site.webmanifest
tests/: api_rate_limit_tests.rs  rate_limit_tests.rs
