[package]
name = "runegate"
version = "0.2.1"
authors = ["Hans Van Wesenbeeck <hvw@aivolution.ch>"]
license = "Apache-2.0"
edition = "2024"
readme = "README.md"
description = "Lightweight Rust-based identity proxy"
repository = "https://github.com/a1v0lut10n/runegate"
homepage = "https://github.com/a1v0lut10n/runegate"
keywords = ["authentication", "identity", "jwt", "rate-limiting", "proxy"]
categories = ["authentication", "web-programming", "network-programming"]

[dependencies]
actix-web = { version = "4.11.0", features = ["cookies"] }
actix-session = { version = "0.10.1", features = ["cookie-session"] }
actix-files = "0.6.5"
awc = { version = "3.4.0", features = ["openssl"] }
dotenvy = "0.15.7"
futures = "0.3.30"
jsonwebtoken = "9.3.1"
lettre = { version = "0.11.18", features = ["smtp-transport", "tokio1", "builder", "tokio1-native-tls"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
toml = "0.9.5"
uuid = { version = "1.18.0", features = ["v4"] }
# Tracing dependencies
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
tracing-bunyan-formatter = "0.3.9"
tracing-log = "0.2.0"
tracing-actix-web = "0.7.19"

# Rate limiting dependencies
governor = "0.10.1"
actix-governor = "0.8.0"
fxhash = "0.2.1"  # Fast hashing for keys
lru = "0.16.0"    # LRU cache for rate limiting storage
rand = "0.9.2"
hex = "0.4.3"     # For decoding hex session keys
anyhow = "1.0"    # Error handling for session store

[dev-dependencies]
tokio = { version = "1.47.1", features = ["full"] }
reqwest = { version = "0.12.23", features = ["json"] }
